@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 
 --- PyFMI-2.5.5 ---
+    * Changed default ncp value from '0' to '500' (ticket:5857)
     * Changed default value for the sparse solver in CVode (if the
       systemsize is >100 and the non-zero pattern is less than 15% then
       a sparse solver is used) (ticket:5666)
